[package]
name = "openssl-shim"
version = "0.1.0"
authors = ["SimranGujral <gujralsimran19@gmail.com>"]

[dependencies]
webpki = "0.12"
env_logger = "0.4.2"
openssl = "*"
pem = "0.3"
hyper = "0.10"
hyper-openssl = "0.2.6"
servo_config = { path = "../config" }
parse-hosts = "0.3.0"
lazy_static = "*"
